[project]
name = "completlyuselesshypixelscanner"
version = "0.1.0"
description = ""
authors = [
    {name = "avirusiam404", email = "ribavan123wawa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"

dependencies = [
    "mcstatus>=12.0.1,<13.0.0",
    "ipaddress>=1.0.23,<2.0.0",
    "aiosqlite>=0.21.0,<0.22.0",
    "python-dotenv>=1.1.1,<2.0.0",
    "telebot>=0.0.5,<0.0.6",
    "asyncio>=4.0.0,<5.0.0",
    "discord-webhook>=1.4.1,<2.0.0",
    "javascript>=1!1.2.5,<1!2.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

